fix background issues on smaller screens

--- a/src/App.css
+++ b/src/App.css
@@ -55,12 +55,12 @@ body {
   background-size: 100% 100%;
   filter: brightness(80%);
   height: 100vh;
+  width: 100vw;
   left: 0;
   object-fit: cover;
   overflow: auto;
   position: absolute;
   top: 0;
-  width: 100vw;
   z-index: -1;
 }
 
@@ -153,62 +153,9 @@ nav a.active {
   background-color: #31313173;
 }
 
-@media (max-width: 768px) {
-  .primary-nav {
-    font-size: 30px;
-    padding: 4rem 1rem;
-    width: 150px;
-  }
-
-  .title {
-    font-size: 60px;
-    padding: 10px;
-    position: absolute;
-    top: 20px;
-    left: 50%;
-    transform: translateX(-50%);
-  }
-}
-
-@media (min-width: 769px) and (max-width: 1366px) {
-  .primary-nav {
-    font-size: 35px;
-    padding: 5rem 1rem;
-    width: 180px;
-  }
-
-  .title {
-    font-size: 80px;
-    padding: 20px;
-    position: absolute;
-    top: 20px;
-    left: 50%;
-    transform: translateX(-50%);
-  }
-}
-
-@media (min-width: 1367px) and (max-width: 1920px) {
-  .primary-nav {
-    font-size: 40px;
-    padding: 8rem 2rem;
-    width: 200px;
-  }
-
-  .title {
-    font-size: 100px;
-    padding: 20px;
-    position: absolute;
-    top: 20px;
-    left: 50%;
-    transform: translateX(-50%);
-  }
-}
-
-@media (min-width: 1921px) {
-  .title {
-    position: absolute;
-    top: 20px;
-    left: 50%;
-    transform: translateX(-50%);
+@media (max-width: 1502px) {
+  .landing {
+    min-height: initial;
+    min-width: initial;
   }
 }
